backend/error.txt
E:\0.0.0 WEB TURTNITIN BY IKARIZ ID\plagiarcheck\backend\src\utils\pdfGenerator.js:77
    <div class="page-break"></div>
     ^^^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1735:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.1
